recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: recursive variable length needs type
		var length = length/3/3*levels;
                             ^